tests/should-fail/flags/shadowing-1.j
globals
    integer i
endglobals

//# +shadow
function foo takes nothing returns nothing
    local integer i
endfunction
